create the hero section in index.html, save img in the img folder, updated the README.md doc adding image author info

--- a/index.html
+++ b/index.html
@@ -18,5 +18,20 @@
             </ul>
         </div>
     </header>
+    <div class="hero">
+        <div class="hero-text">
+            <h1>The BakeAndShake you were waiting for</h1>
+            <p>If you haven't watched the Latin Spanish version of 
+                the movie "Talladega Nights - The Ballad of Ricky Bobby," 
+                you won't be able to understand the joke.
+            </p>
+            <div class="button">
+                <a href="#">Sing up</a>
+            </div>
+        </div>
+        <div class="hero-img">
+            <img src="./img/nascar.jpg" alt="hero-image">
+        </div>
+    </div>
 </body>
 </html>
