add main section divided into three divs; main-info, main-quote and main-singUp, in the index.html doc

--- a/index.html
+++ b/index.html
@@ -33,5 +33,10 @@
             <img src="./img/nascar.jpg" alt="hero-image">
         </div>
     </div>
+    <main class="main-container">
+        <div class="main-info"></div>
+        <div class="main-quote"></div>
+        <div class="main-singUp"></div>
+    </main>
 </body>
 </html>
