add internal structure of main-info div in index.html: h2 title, main-info-quotes div container; div 4 containers; div image container and quote p container

--- a/index.html
+++ b/index.html
@@ -34,9 +34,31 @@
         </div>
     </div>
     <main class="main-container">
-        <div class="main-info"></div>
+        <div class="main-info">
+            <h2>Some BakeAndShake info</h2>
+            <div class="main-info-quotes">
+                <div class="info-quote">
+                    <div class="main-info-img"></div>
+                    <p class="main-info-p">"Help me, Tom Cruise! Tom Cruise, use your witchcraft on me
+                         to get the fire off me!"</p>
+                </div>
+                <div class="info-quote">
+                    <div class="main-info-img"></div>
+                    <p class="main-info-p">"Dear Lord Baby Jesus, we thank you so much for this bountiful 
+                        harvest of Domino's, KFC, and the always delicious Taco Bell."</p>
+                </div>
+                <div class="info-quote">
+                    <div class="main-info-img"></div>
+                    <p class="main-info-p">"I'm just a big, hairy, American winning machine!"</p>
+                </div>
+                <div class="info-quote">
+                    <div class="main-info-img"></div>
+                    <p class="main-info-p">"If you ain't first, you're last."</p>
+                </div>
+            </div>
+        </div>
         <div class="main-quote"></div>
-        <div class="main-singUp"></div>
+        <div class="main-signUp"></div>
     </main>
 </body>
 </html>
