add to main-quote in index.html, two p, class quote and quote-author

--- a/index.html
+++ b/index.html
@@ -57,7 +57,16 @@
                 </div>
             </div>
         </div>
-        <div class="main-quote"></div>
+        <div class="main-quote">
+            <p class="quote">
+                "You sick sons of bitches. I mean you walk in that door, on your two legs... 
+                all fat and cocky and lookin' at me in my chair. And you tell me its all in my head? 
+                I hope that both of you have sons... Handsome, beautiful, articulate sons, 
+                who are talented and star athletes and they have their legs taken away. 
+                I mean I pray you know that pain and that hurt."
+            </p>
+            <p class="quote-Author">Ricky Bobby</p>
+        </div>
         <div class="main-signUp"></div>
     </main>
 </body>
