add internal main-sign Up structure in index.html, 3 div, 1 h3, 1 p, and an a

--- a/index.html
+++ b/index.html
@@ -67,7 +67,21 @@
             </p>
             <p class="quote-Author">Ricky Bobby</p>
         </div>
-        <div class="main-signUp"></div>
+        <div class="main-signUp">
+            <div>
+                <div class="singUp-info">
+                    <h3>Register for the action! If you ain't first, you're last.</h3>
+                    <p class="singUp-info-p">If you have made it this far with a few laughs
+                        or smiles, you should sign up.
+                    </p>
+                </div>
+                <div class="signUp-button">
+                    <div class="button">
+                        <a href="#">Sign Up</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
