add footer to the index.html doc, a p with copyright information and year

--- a/index.html
+++ b/index.html
@@ -83,5 +83,8 @@
             </div>
         </div>
     </main>
+    <footer>
+        <p>Copyright &copy; The Odin Project 2024</p>
+    </footer>
 </body>
 </html>
