Create new parent div called main-hero to contain header and Hero. Modify CSS styles to include main-hero and adjust margin, background, and padding of main-hero's children

--- a/index.html
+++ b/index.html
@@ -7,33 +7,36 @@
     <title>BakeAndShake</title>
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <h2>BakeAndShake</h2>
-        </div>
-        <div class="menu">
-            <ul>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Shop</a></li>
-                <li><a href="#">More</a></li>
-            </ul>
-        </div>
-    </header>
-    <div class="hero">
-        <div class="hero-text">
-            <h1>The BakeAndShake you were waiting for</h1>
-            <p>If you haven't watched the Latin Spanish version of 
-                the movie "Talladega Nights - The Ballad of Ricky Bobby," 
-                you won't be able to understand the joke.
-            </p>
-            <div class="button">
-                <a href="#">Sing up</a>
+    <div class="main-hero">
+        <header>
+            <div class="logo">
+                <h2>BakeAndShake</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Shop</a></li>
+                    <li><a href="#">More</a></li>
+                </ul>
+            </div>
+        </header>
+        <div class="hero">
+            <div class="hero-text">
+                <h1>The BakeAndShake you were waiting for</h1>
+                <p>If you haven't watched the Latin Spanish version of 
+                    the movie "Talladega Nights - The Ballad of Ricky Bobby," 
+                    you won't be able to understand the joke.
+                </p>
+                <div class="button">
+                    <a href="#">Sing up</a>
+                </div>
+            </div>
+            <div class="hero-img">
+                <img src="./img/nascar.jpg" alt="hero-image">
             </div>
         </div>
-        <div class="hero-img">
-            <img src="./img/nascar.jpg" alt="hero-image">
-        </div>
     </div>
+
     <main class="main-container">
         <div class="main-info">
             <h2>Some BakeAndShake info</h2>
