Refactor index.html by moving main-quote div out of main-container to achieve desired design where main-quote occupies 100% of the viewport. Add styles for text centering, colour, italic font style, background color, and paddings

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <main class="main-container">
+    <div class="main-container">
         <div class="main-info">
             <h2>Some BakeAndShake info</h2>
             <div class="main-info-quotes">
@@ -61,17 +61,18 @@
                 </div>
             </div>
         </div>
-        <div class="main-quote">
-            <p class="quote">
+    </div>
+    <div class="main-quote">
+        <p class="quote">
                 "You sick sons of bitches. I mean you walk in that door, on your two legs... 
                 all fat and cocky and lookin' at me in my chair. And you tell me its all in my head? 
                 I hope that both of you have sons... Handsome, beautiful, articulate sons, 
                 who are talented and star athletes and they have their legs taken away. 
                 I mean I pray you know that pain and that hurt."
-            </p>
-            <p class="quote-Author">Ricky Bobby</p>
-        </div>
-        <div class="main-signUp">
+        </p>
+        <p class="quote-Author">- Ricky Bobby</p>
+    </div>
+    <div class="main-signUp">
             <div>
                 <div class="singUp-info">
                     <h3>Register for the action! If you ain't first, you're last.</h3>
@@ -85,8 +86,8 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </main>
+    </div>
+    
     <footer>
         <p>Copyright &copy; The Odin Project 2024</p>
     </footer>
