Add class to main-signUp div in index.html, apply signUp-container class to its immediate child div, and add styles including max-width and paddings to the parent. Add background color, paddings, border, and Flex styles to signUp-container children. Also, add color, margin-bottom, and border to button children of signUp-container

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
         <p class="quote-Author">- Ricky Bobby</p>
     </div>
     <div class="main-signUp">
-            <div>
+            <div class="signUp-container">
                 <div class="singUp-info">
-                    <h3>Register for the action! If you ain't first, you're last.</h3>
+                    <h3>Register for the action! If you ain't first, you're last!</h3>
                     <p class="singUp-info-p">If you have made it this far with a few laughs
                         or smiles, you should sign up.
                     </p>
