Add button-two class to button in main-signUp container for shared styles with the button in Hero container, while maintaining unique styles. Apply max-width, paddings, background color, and center text in footer

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     </p>
                 </div>
                 <div class="signUp-button">
-                    <div class="button">
+                    <div class="button button-two">
                         <a href="#">Sign Up</a>
                     </div>
                 </div>
